ves-parser/tests/t23_parse_bad_loop.test
@label /* no colon */ loop {}
loop /* no body */ ;

for /* no binding */ in 0..10 {}
for i in 0..10 /* no body */ ;

for /* no header */ {}
for i /* not initialized */ ;; {}
for i = 0, /* trailing comma is invalid here */ ;; {}

while /* no condition */ {} 
while true /* no body */ ;

%output err

error: Expected a ':' after the label
  ┌─ <source: #bf83ae1998830989>:1:23
  │
1 │ @label /* no colon */ loop {}
  │                       ^^^^

error: Expected a loop body after the keyword
  ┌─ <source: #bf83ae1998830989>:2:20
  │
2 │ loop /* no body */ ;
  │                    ^

error: Expected identifier
  ┌─ <source: #bf83ae1998830989>:4:22
  │
4 │ for /* no binding */ in 0..10 {}
  │                      ^^

error: Expected loop body
  ┌─ <source: #bf83ae1998830989>:5:30
  │
5 │ for i in 0..10 /* no body */ ;
  │                              ^

error: Expected a ';' after the initializers
  ┌─ <source: #bf83ae1998830989>:7:21
  │
7 │ for /* no header */ {}
  │                     ^

error: Expected an identifier
  ┌─ <source: #bf83ae1998830989>:9:49
  │
9 │ for i = 0, /* trailing comma is invalid here */ ;; {}
  │                                                 ^

error: Unexpected token `;` (Semi)
  ┌─ <source: #bf83ae1998830989>:9:50
  │
9 │ for i = 0, /* trailing comma is invalid here */ ;; {}
  │                                                  ^

error: Expected loop body
   ┌─ <source: #bf83ae1998830989>:12:1
   │
12 │ while true /* no body */ ;
   │ ^^^^^
